<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="contactsViewModel"
            type="com.powjunkie.contacts.viewmodel.ContactsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddContactsActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        tools:text="@string/first_name"
        app:layout_constraintStart_toStartOf="@+id/lastName"
        app:layout_constraintTop_toBottomOf="@+id/avatarImage" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        tools:text="@string/last_name"
        app:layout_constraintStart_toStartOf="@+id/nickname"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Nickname"
        tools:text="Nickname"
        app:layout_constraintStart_toStartOf="@+id/phoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="Phone"
        app:layout_constraintStart_toEndOf="@+id/phoneImage"
        app:layout_constraintTop_toBottomOf="@+id/nickname" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="Email"
        app:layout_constraintStart_toEndOf="@+id/emailImage"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <EditText
        android:id="@+id/twitterTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Twitter Tag"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/twitterImage"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress"
        tools:text="Twitter Tag" />

    <ImageView
        android:id="@+id/phoneImage"
        android:layout_width="41dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_baseline_phone_24"
        android:contentDescription="@string/image_of_a_phone"
        app:layout_constraintBottom_toBottomOf="@+id/phoneNumber"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/emailImage"
        android:layout_width="42dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_baseline_email_24"
        android:contentDescription="@string/image_of_an_envelope"
        app:layout_constraintBottom_toBottomOf="@+id/emailAddress"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/twitterImage"
        android:layout_width="39dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/image_of_the_twitter_logo"
        android:src="@drawable/ic_twitter_t_01"
        app:layout_constraintBottom_toBottomOf="@+id/twitterTag"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/avatarImage"
        android:layout_width="353dp"
        android:layout_height="189dp"
        android:contentDescription="@string/placeholder_image_for_a_photo"
        android:src="@drawable/ic_clown_funny_svgrepo_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />


        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Submit"
            android:contentDescription="@string/submit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twitterTag" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:contentDescription="@string/image_of_a_camera"
            android:scaleType="center"
            android:src="@drawable/ic_baseline_photo_camera_24"
            app:layout_constraintBottom_toBottomOf="@+id/avatarImage"
            app:layout_constraintEnd_toEndOf="parent" />

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>